Fix alignment on topic pages

--- a/components/StreamField/StreamField.module.scss
+++ b/components/StreamField/StreamField.module.scss
@@ -1,5 +1,7 @@
 .container {
-    max-width: 800px;
+    @include media-query(large) {
+        margin: 0 calc(5rem + 80px);
+    }
 }
 
 .text {
